--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.23.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
+    "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
