--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pie-chart": "^3.0.1",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
