--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pie-chart": "^3.0.1",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-stopwatch-timer": "^0.0.21",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
