--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
+    "expo-crypto": "~12.2.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
     "react": "18.2.0",
@@ -29,7 +30,6 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-web": "~0.18.11"
-    "expo-crypto": "~12.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
