--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-pie-chart": "^3.0.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-stopwatch-timer": "^0.0.21",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "expo-speech": "~11.1.1",
+    "expo-av": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
