--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
@@ -17,7 +18,9 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
+    "expo-av": "~13.2.1",
     "expo-crypto": "~12.2.1",
+    "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
     "react": "18.2.0",
@@ -29,9 +32,7 @@
     "react-native-pie-chart": "^3.0.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-stopwatch-timer": "^0.0.21",
-    "react-native-web": "~0.18.11",
-    "expo-speech": "~11.1.1",
-    "expo-av": "~13.2.1"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
