--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
-    "expo-av": "~13.2.1",
+    "expo-av": "^13.4.1",
     "expo-crypto": "~12.2.1",
     "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
