--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-community/slider": "^4.4.2",
@@ -20,6 +21,7 @@
     "expo": "~48.0.18",
     "expo-av": "^13.4.1",
     "expo-crypto": "~12.2.1",
+    "expo-font": "^11.4.0",
     "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
