--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-svg": "^13.4.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
