--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "expo": "~48.0.18",
     "expo-av": "^13.4.1",
     "expo-crypto": "~12.2.1",
-    "expo-font": "^11.4.0",
+    "expo-font": "~11.1.1",
     "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
