--- a/app.json
+++ b/app.json
@@ -21,12 +21,17 @@
       "package": "com.innobytes.remeadi",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ac722d33-2ca6-469c-a79a-6047e4863a6d"
+      }
     }
   }
 }
