--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
-    "expo-av": "^13.4.1",
+    "expo-av": "~13.2.1",
+    "expo-cli": "^6.3.10",
     "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
     "expo-speech": "~11.1.1",
@@ -37,7 +38,8 @@
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-svg": "^13.4.0",
     "react-native-toast-message": "^2.1.6",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
