--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "react-native-svg": "^13.4.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.11",
-    "uuid": "^9.0.0",
-    "expo-notifications": "~0.18.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
