--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-flip-card": "^3.5.7",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pie-chart": "^3.0.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-svg": "^13.4.0",
