--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-svg": "^13.4.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.11",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
