--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "2.4.8",
@@ -27,11 +27,12 @@
     "expo-notifications": "^0.18.1",
     "expo-speech": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.23.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "^0.71.14",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-flip-card": "^3.5.7",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
@@ -42,8 +43,7 @@
     "react-native-svg": "^13.4.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.11",
-    "uuid": "^9.0.0",
-    "expo-updates": "~0.16.4"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
